file(GLOB_RECURSE proto_files proto/*.proto)
saber_protobuf_generate_cpp(${proto_gen_folder} proto_srcs proto_hdrs ${proto_files})
set_source_files_properties(${proto_hdrs} ${proto_srcs} PROPERTIES COMPILE_FLAGS "-Wno-conversion -Wno-shorten-64-to-32 -Wno-deprecated-declarations -fPIC")

install(FILES ${proto_gen_folder}/saber.pb.h DESTINATION include/saber/proto)

set(Saber_SRCS ${proto_srcs})
add_subdirectory(public)
add_subdirectory(service)
add_subdirectory(util)

if(BUILD_SHARED_LIBS)
  add_library(saber SHARED ${Saber_SRCS})
  add_library(saber_static STATIC ${Saber_SRCS})
  set_target_properties(saber_static PROPERTIES OUTPUT_NAME "saber")
  set_target_properties(saber PROPERTIES CLEAN_DIRECT_OUTPUT ${SABER_VERSION_MAJOR})
  set_target_properties(saber_static PROPERTIES CLEAN_DIRECT_OUTPUT ${SABER_VERSION_MAJOR})
  set_target_properties(saber PROPERTIES VERSION ${SABER_VERSION_STRING} SOVERSION ${SABER_VERSION_MAJOR})
  target_link_libraries(saber ${Saber_LINKER_LIBS})
  install(TARGETS saber DESTINATION lib)
  install(TARGETS saber_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
  add_library(saber ${Saber_SRCS})
  target_link_libraries(saber ${Saber_LINKER_LIBS})
  install(TARGETS saber DESTINATION lib)
endif()

if (BUILD_CLIENT_LIBS)
  add_subdirectory(client)
endif()
if (BUILD_SERVER_LIBS)
  add_subdirectory(server)
endif()

if(BUILD_TESTS)
  add_subdirectory(test)
  add_subdirectory(main)
endif()
