if(BUILD_SHARED_LIBS AND BUILD_CLIENT_LIBS)
  add_library(saber_client SHARED ${saber_client_srcs})
  add_library(saber_client_static STATIC ${saber_client_srcs})
  set_target_properties(saber_client_static PROPERTIES OUTPUT_NAME "saber_client")
  set_target_properties(saber_client PROPERTIES CLEAN_DIRECT_OUTPUT ${SABER_VERSION_MAJOR})
  set_target_properties(saber_client_static PROPERTIES CLEAN_DIRECT_OUTPUT ${SABER_VERSION_MAJOR})
  set_target_properties(saber_client PROPERTIES VERSION ${SABER_VERSION_STRING} SOVERSION ${SABER_VERSION_MAJOR})
  target_link_libraries(saber_client ${Saber_LINKER_LIBS})
  install(TARGETS saber_client DESTINATION lib)
  install(TARGETS saber_client_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
elseif(BUILD_CLIENT_LIBS)  
  add_library(saber_client ${saber_client_srcs})
  target_link_libraries(saber_client ${Saber_LINKER_LIBS})
  install(TARGETS saber_client DESTINATION lib)
endif()
  
if(BUILD_SHARED_LIBS AND BUILD_SERVER_LIBS)
  add_library(saber_server SHARED ${saber_server_srcs})
  add_library(saber_server_static STATIC ${saber_server_srcs})
  set_target_properties(saber_server_static PROPERTIES OUTPUT_NAME "saber_server")
  set_target_properties(saber_server PROPERTIES CLEAN_DIRECT_OUTPUT ${SABER_VERSION_MAJOR})
  set_target_properties(saber_server_static PROPERTIES CLEAN_DIRECT_OUTPUT ${SABER_VERSION_MAJOR})
  set_target_properties(saber_server PROPERTIES VERSION ${SABER_VERSION_STRING} SOVERSION ${SABER_VERSION_MAJOR})
  target_link_libraries(saber_server ${Saber_LINKER_LIBS})
  install(TARGETS saber_server DESTINATION lib)
  install(TARGETS saber_server_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
elseif(BUILD_SERVER_LIBS)
  add_library(saber_server ${saber_server_srcs})
  target_link_libraries(saber_server ${Saber_LINKER_LIBS})
  install(TARGETS saber_server DESTINATION lib)
endif()

if(BUILD_CLIENT_LIBS)
  install(DIRECTORY ${Saber_INCLUDE_DIRS}/saber/client DESTINATION include/saber)
  install(DIRECTORY ${Saber_INCLUDE_DIRS}/saber/service DESTINATION include/saber)
  install(DIRECTORY ${Saber_INCLUDE_DIRS}/saber/util DESTINATION include/saber)
endif()

if(BUILD_SERVER_LIBS)
  install(DIRECTORY ${Saber_INCLUDE_DIRS}/saber/server DESTINATION include/saber)
  install(DIRECTORY ${Saber_INCLUDE_DIRS}/saber/util DESTINATION include/saber)
endif()

if(BUILD_TESTS)
  add_subdirectory(test)
  add_subdirectory(main)
endif()
